# AllinOne

AllInOne/: CMakeLists.txt  dbconnector.cpp  dbconnector.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  toss.cpp  toss.h
AllInOne/Headers/: camera.h  coordinates.h
AllInOne/Robot/: toss.cpp  toss.h
AllInOne/Sources/: camera.cpp  coordinates.cpp
AllInOne/TCPIP/: tcpipserver.cpp  tcpipserver.h
build-tcpip-Desktop-Default/: AllinOne1.2  AllinOne1.2.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  ui_mainwindow.h
build-tcpip-Desktop-Default/AllinOne1.2_autogen/EWIEGA46WW/: moc_mainwindow.cpp
tcpip/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpserver.cpp  tcpserver.h  toss.cpp  toss.h
tcpip/Headers/: camera.h  chessboard.h  coordinates.h
tcpip/Sources/: camera.cpp  chessboard.cpp  coordinates.cpp
tcpip/TCPIP/: tcpipserver.cpp  tcpipserver.h
